# esp32_learn

./: README.md
basic_gpio/: CMakeLists.txt  sdkconfig
basic_gpio/main/: CMakeLists.txt  basic_gpio.c
encoder_motor/: CMakeLists.txt  readme.md
encoder_motor/main/: CMakeLists.txt  encoder_motor.c
encoder_motor/tools/: monitor.py
encoder_pcnt/: CMakeLists.txt
encoder_pcnt/main/: CMakeLists.txt  encoder_pcnt.c
gpio_interrupt/: CMakeLists.txt
gpio_interrupt/main/: gpio_interrupt.c
lvgl_base/: CMakeLists.txt  sdkconfig
lvgl_base/main/: CMakeLists.txt  lvgl_base.c
mcpmw_motor/: CMakeLists.txt
mcpmw_motor/main/: CMakeLists.txt  mcpmw_motor.c
pcnt/rotary_encoder/: sdkconfig
pcnt_update/: CMakeLists.txt
pcnt_update/main/: CMakeLists.txt  pcnt_update.c
post_server_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
post_server_test/main/: CMakeLists.txt  post_server_test.c
pwm_servo/: CMakeLists.txt  readme.txt
pwm_servo/main/: CMakeLists.txt  pwm_servo.c
soft_spi/: CMakeLists.txt
soft_spi/main/: CMakeLists.txt
software_spi/: CMakeLists.txt
software_spi/main/: CMakeLists.txt  software_spi.c
timer_alarm/: CMakeLists.txt
timer_alarm/main/: CMakeLists.txt  timer_alarm.c
uart/main/: uart.c
web_encoder_motor/: CMakeLists.txt  partitions.csv  sdkconfig
web_encoder_motor/main/: CMakeLists.txt  web_encoder_motor.c
wifi_e_ink/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
wifi_e_ink/main/: CMakeLists.txt  wifi_e_ink.c
wifi_learn/: CMakeLists.txt  sdkconfig.old
wifi_learn/main/: CMakeLists.txt  wifi_learn.c
(+62 files in other folders)
